package etcd;

import "code.google.com/p/gogoprotobuf/gogoproto/gogo.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_getters_all) = false;

message cmd {
	required int32  type       = 1 [(gogoproto.nullable) = false];
	required string key        = 2 [(gogoproto.nullable) = false];
	optional string value      = 3;
	optional string prevValue  = 4;
	optional uint64 prevIndex  = 5;
	optional bool   dir        = 6;
	optional bool   recursive  = 7;
	optional bool   unique     = 8;
	optional bool   sorted     = 9;
	optional bytes  time       = 10;
}
